fix first recipe image overflowing issue

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
 }
 h1{
     text-align: center;
@@ -13,16 +14,18 @@ h1{
     display: flex;
     flex-direction: column;
     border: 0px solid grey;
-    width: 90%;
+    max-width: 90%;
     box-shadow: 2px 2px 2px 2px grey;
     border-radius: 20px;
+    flex-wrap: wrap;
 }
 
 .first-recipe, .second-recipe, .third-recipe{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     img,a{
-        max-width:70%%;
+        max-width:100%%;
         max-height: 190px;
         align-self: center;
         filter: grayscale(100%);
@@ -40,13 +43,16 @@ h1{
     border: 0px solid grey;
     margin: 10px;
     padding: 10px;
-    width: 50%;
+    max-width: 50%;
     box-shadow: 2px 2px 2px 2px grey;
     border-radius: 20px;
 }
 
-
 .second-recipe{
     align-self: flex-end;
+}
+
+.first-recipe img{
+    max-width: 200px;
 }
 
